# CUDA_Tutorial

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  run_clang_tidy.py
cmake/clang_cuda_compat/: texture_fetch_functions.h
lessons/: CMakeLists.txt
lessons/01_device_query/: CMakeLists.txt  README.md  device_query.cu  device_query_test.cu
lessons/02_hello_kernel/: CMakeLists.txt  README.md  hello_kernel.cu  hello_kernel_test.cu
lessons/03_error_handling/: CMakeLists.txt  README.md  error_handling.cu  error_handling_test.cu
lessons/04_memory_model/: CMakeLists.txt  README.md  memory_model.cu  memory_model_test.cu
lessons/05_thread_hierarchy/: CMakeLists.txt  README.md  thread_hierarchy.cu  thread_hierarchy_test.cu
lessons/06_memory_transfers/: CMakeLists.txt  README.md  memory_transfers.cu  memory_transfers_test.cu
lessons/07_streams_events/: CMakeLists.txt  README.md  streams_events.cu  streams_events_test.cu
lessons/08_reduction/: CMakeLists.txt  README.md  reduction.cu  reduction_test.cu
lessons/09_scan/: CMakeLists.txt  README.md  scan.cu  scan_test.cu
lessons/10_transpose/: CMakeLists.txt  README.md  transpose.cu  transpose_test.cu
lessons/11_matmul/: CMakeLists.txt  README.md  matmul.cu  matmul_test.cu
lessons/12_dense_layer/: CMakeLists.txt  README.md  dense_layer.cu  dense_layer_test.cu
lessons/13_activations/: CMakeLists.txt  README.md  activations.cu  activations_test.cu
lessons/14_conv2d/: CMakeLists.txt  README.md  conv2d.cu  conv2d_test.cu
lessons/15_pooling/: CMakeLists.txt  README.md  pooling.cu  pooling_test.cu
lessons/16_loss/: CMakeLists.txt  README.md  loss.cu  loss_test.cu
lessons/17_training/: CMakeLists.txt  README.md  training.cu  training_test.cu
lessons/18_inference/: CMakeLists.txt  README.md  inference.cu  inference_test.cu
lessons/19_cublas_cudnn/: CMakeLists.txt  README.md  cublas_cudnn.cu  cublas_cudnn_test.cu
lessons/20_minibatch_training/: CMakeLists.txt  README.md  minibatch_training.cu  minibatch_training_test.cu
lessons/21_mixed_precision/: CMakeLists.txt  README.md  mixed_precision.cu  mixed_precision_test.cu
lessons/22_performance_measurement/: CMakeLists.txt  README.md  performance_measurement.cu  performance_measurement_test.cu
lessons/23_batch_normalization/: CMakeLists.txt  README.md  batch_normalization.cu  batch_normalization_test.cu
lessons/24_dropout/: CMakeLists.txt  README.md  dropout.cu  dropout_test.cu
lessons/25_optimizers/: CMakeLists.txt  README.md  optimizers.cu  optimizers_test.cu
lessons/26_cooperative_groups/: CMakeLists.txt  README.md  cooperative_groups.cu  cooperative_groups_test.cu
lessons/27_cuda_graphs/: CMakeLists.txt  README.md  cuda_graphs.cu  cuda_graphs_test.cu
lessons/28_embeddings/: CMakeLists.txt  README.md  embeddings.cu  embeddings_test.cu
lessons/29_residual_layernorm/: CMakeLists.txt  README.md  residual_layernorm.cu  residual_layernorm_test.cu
lessons/30_gru/: CMakeLists.txt  README.md  gru.cu  gru_test.cu
lessons/31_self_attention/: CMakeLists.txt  README.md  self_attention.cu  self_attention_test.cu
lessons/32_transformer/: CMakeLists.txt  README.md  transformer.cu  transformer_test.cu
